k8s/frontend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: frontend
  namespace: perfmonitor

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: perf-frontend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
