k8s/api-service.yml
apiVersion: v1

kind: Service

metadata:
  name: reportapi-service
  namespace: perfmonitor

spec:
  selector:
    app: reportapi

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30081

  type: NodePort
