k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: perfmonitor-ingress
  namespace: perfmonitor

spec:
  ingressClassName: nginx

  rules:
  - host: perfmonitor.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: reportapi-service
            port:
              number: 8080
